Implemented basic implementation of single constructor with arguments bean creation